fixed problem with reading in .net file with no time info (default is now [0-1]) fix (potential) bug with combine same names option
git-svn-id: http://svn.code.sf.net/p/sonia/source_code@97 fb298286-8e17-4df1-bf80-b634edc3145b